group-tasks/atum/deployment-files/country-app.yaml
  apiVersion: v1
  kind: ConfigMap
  metadata:
   # Name der ConfigMap
   name: country-app-svc-configmap
   namespace: atum
  data:
   # Environment Variable
   COUNTRY_SERVICE_URL: "http://ae8333ccd462511eaba7d0af1187e991-581492011.eu-central-1.elb.amazonaws.com:8081/atum-cs"
   CURRENCY_SERVICE_URL: "http://ae8333ccd462511eaba7d0af1187e991-581492011.eu-central-1.elb.amazonaws.com:8081/atum-cu"
   LANGUAGE_SERVICE_URL: "http://ae8333ccd462511eaba7d0af1187e991-581492011.eu-central-1.elb.amazonaws.com:8081/atum-ls"
---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    # Name des Pods
    name: country-app-svc-deployment
    # Name des Namespaces
    namespace: atum
    # Label zur Identifikation des Pods via Key-Value Paar
    labels:
      service: country-app_api_service
  spec:
    # Anzahl wie oft der Pod repliziert wird
    replicas: 1
    selector:
      matchLabels:
        name: country-app-api-service-selector
    template:
      metadata:
        labels:
          name: country-app-api-service-selector
      spec:
        containers:
          - name: country-app-api
            # image welches für den Container geladen wird
            image: exxcellent/cps-country-app-service:atum
            # wann soll das Image gepullt werden
            imagePullPolicy: Always
            ports:
            # geöffneter Port des Containers
            - containerPort: 80
            securityContext:
            # environment variablen aus Configmap laden
---
  apiVersion: v1
  kind: Service
  metadata:
    name: country-app-svc-service
    namespace: atum
  spec:
    type: ClusterIP
    ports:
      - port: 8484
        targetPort: 80
        name: api
        protocol: TCP
    selector:
      name: country-app-api-service-selector
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: country-app-svc-ingress
    namespace: atum
    annotations:
      kubernetes.io/ingress.class: traefik
  spec:
    rules:
    - host: 
      http:
        paths:
        - path: /atum/
          backend:
            serviceName: country-app-svc-service
            servicePort: 8484
