group-tasks/atum/deployment-files/language-service.yaml
  apiVersion: v1
  kind: ConfigMap
  metadata:
   name: language-svc-configmap
   namespace: atum
  data:
   LANGUAGE_VERSION: ""
---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: language-svc-deployment
    namespace: atum
    labels:
      service: language_api_service
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: language-api-service-selector
    template:
      metadata:
        labels:
          name: language-api-service-selector
          app: language-api-backend
      spec:
        containers:
          - name: language-api
            image: exxcellent/cps-language-service:latest
            imagePullPolicy: Always
            ports:
            - containerPort: 8082
            securityContext:
              runAsNonRoot: true
              runAsUser: 82
---
  apiVersion: v1
  kind: Service
  metadata:
    name: language-svc-service
    namespace: atum
  spec:
    type: ClusterIP
    ports:
      - port: 8082
        name: api
        protocol: TCP
    selector:
      name: language-api-service-selector
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: language-svc-ingress
    namespace: atum
    annotations:
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  spec:
    rules:
    - host: 
      http:
        paths:
        - path: /atum-ls/
          backend:
            serviceName: language-svc-service
            servicePort: 8082
